; ModuleID = '/home/carl/AnghaBench/linux/arch/arm/mm/extr_copypage-v6.c_v6_copy_user_highpage_nonaliasing.c'
source_filename = "/home/carl/AnghaBench/linux/arch/arm/mm/extr_copypage-v6.c_v6_copy_user_highpage_nonaliasing.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.page = type { i32 }
%struct.vm_area_struct = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.page*, %struct.page*, i64, %struct.vm_area_struct*)* @v6_copy_user_highpage_nonaliasing to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @v6_copy_user_highpage_nonaliasing(%struct.page* %0, %struct.page* %1, i64 %2, %struct.vm_area_struct* %3) #0 {
  %5 = alloca %struct.page*, align 8
  %6 = alloca %struct.page*, align 8
  %7 = alloca i64, align 8
  %8 = alloca %struct.vm_area_struct*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  store %struct.page* %0, %struct.page** %5, align 8
  store %struct.page* %1, %struct.page** %6, align 8
  store i64 %2, i64* %7, align 8
  store %struct.vm_area_struct* %3, %struct.vm_area_struct** %8, align 8
  %11 = load %struct.page*, %struct.page** %6, align 8
  %12 = call i8* @kmap_atomic(%struct.page* %11)
  store i8* %12, i8** %10, align 8
  %13 = load %struct.page*, %struct.page** %5, align 8
  %14 = call i8* @kmap_atomic(%struct.page* %13)
  store i8* %14, i8** %9, align 8
  %15 = load i8*, i8** %9, align 8
  %16 = load i8*, i8** %10, align 8
  %17 = call i32 @copy_page(i8* %15, i8* %16)
  %18 = load i8*, i8** %9, align 8
  %19 = call i32 @kunmap_atomic(i8* %18)
  %20 = load i8*, i8** %10, align 8
  %21 = call i32 @kunmap_atomic(i8* %20)
  ret void
}

declare dso_local i8* @kmap_atomic(%struct.page*) #1

declare dso_local i32 @copy_page(i8*, i8*) #1

declare dso_local i32 @kunmap_atomic(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
